--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -15,6 +15,7 @@ body {
   );
   font-family: sans-serif;
   overflow-y: hidden;
+  overflow-x: hidden;
   display: flex;
   justify-content: center;
 }
